--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,10 +12,10 @@
 
       <!--ソートするためのリンクを作成する-->
       <p>
-        <%= link_to '新しい順', books_path(latest: "ture") %>
+        <%= link_to '新しい順', books_path(latest: "true") %>
         |<%= link_to '評価の高い順', books_path(star_count: "true") %>
       </p>
-      
+
       <%= render 'index', books: @books%>
     </div>
   </div>
